fix contrast on siteplan

--- a/week01/styles/chamber-site-plan.css
+++ b/week01/styles/chamber-site-plan.css
@@ -10,7 +10,7 @@ h1, h2, .force-Merriweather {
 }
 
 section {
-    background-color: #71993a;
+    background-color: #455e22;
     border-radius: 4px;
     text-align: center;
     margin: 1rem;
